--- a/selenium/English/LogIn.html
+++ b/selenium/English/LogIn.html
@@ -12,6 +12,11 @@
 <tr><td rowspan="1" colspan="3">LogIn</td></tr>
 </thead><tbody>
 <tr>
+	<td>clickAndWait</td>
+	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
+	<td></td>
+</tr>
+<tr>
 	<td>sendKeys</td>
 	<td>id=j_username</td>
 	<td>abc 用户 01230</td>
@@ -36,7 +41,6 @@
 	<td>css=b</td>
 	<td>Welcome to the space of 用户abc 001----I am a test user, I am supposed to disppear myself after test.</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
