--- a/selenium/English/ChangePI.html
+++ b/selenium/English/ChangePI.html
@@ -11,6 +11,154 @@
 <thead>
 <tr><td rowspan="1" colspan="3">ChangePI</td></tr>
 </thead><tbody>
+<tr>
+	<td>open</td>
+	<td>/messages</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img[alt=&quot;Manage Account Info&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=_name_id</td>
+	<td>abc 用户 01230</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=_email_id</td>
+	<td>tester@ShareTheGoodOnes.com</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=_password_id</td>
+	<td>1234</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=_description_id</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=_description_id</td>
+	<td>I am a test user, I'll disppear myself after test.</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=_name_id</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=_name_id</td>
+	<td>用户abc 01230</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=_password_id</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=_password_id</td>
+	<td>4321</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=_email_id</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=_email_id</td>
+	<td>tao@ShareTheGoodOnes.com</td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=_description_id</td>
+	<td>in God, we trust!</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=proceed</td>
+	<td></td>
+</tr>
+<!--verify-->
+<tr>
+	<td>verifyText</td>
+	<td>id=_s_com_aeiou_bigbang_domain_UserAccount_name_name_id</td>
+	<td>用户abc 01230</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>id=_s_com_aeiou_bigbang_domain_UserAccount_description_description_id</td>
+	<td>in God, we trust!</td>
+</tr>
+<!--verify again by login with new username and password.-->
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Home Page of abc 用户 01230</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=j_username</td>
+	<td>用户abc 01230</td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=j_password</td>
+	<td>4321</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>css=b</td>
+	<td>Welcome to the space of 用户abc 01230----in God, we trust!</td>
+</tr>
+<!--change back-->
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img[alt=&quot;Manage Account Info&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=_name_id</td>
+	<td>用户 01230</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=widget__name_id</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=_name_id</td>
+	<td>abc用户 01230</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=_password_id</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=_password_id</td>
+	<td>1234</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=proceed</td>
+	<td></td>
+</tr>
 
 </tbody></table>
 </body>
