--- a/selenium/English/CreateBG.html
+++ b/selenium/English/CreateBG.html
@@ -33,13 +33,58 @@
 	<td>Test Blog that will disppear after test</td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>id=dijitEditorBody</td>
+	<td>Test Blog that will disppear after test</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//span[@id='dijit_form_ToggleButton_0']/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>xpath=(//input[@value=''])[8]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//span[@id='dijit_form_ToggleButton_1']/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>xpath=(//input[@value=''])[9]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//span[@id='dijit_form_ToggleButton_2']/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>xpath=(//input[@value=''])[10]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//span[@id='dijit_form_ToggleButton_3']/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>xpath=(//input[@value=''])[11]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>//span[@id='dijit_form_Button_5']/span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//input[@value=''])[13]</td>
+	<td>xpath=(//input[@value=''])[12]</td>
 	<td></td>
 </tr>
 <tr>
@@ -53,9 +98,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=_twtitle_id</td>
-	<td></td>
+	<td>type</td>
+	<td>id=dijitEditorBody</td>
+	<td>The content of test Blog</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -69,6 +114,17 @@
 </tr>
 <tr>
 	<td>verifyText</td>
+	<td>id=_title_ps_com_aeiou_bigbang_domain_Twitter_id_pane</td>
+	<td>The content of test Blog -- abc 用户 01230 22:36 15/08/2013</td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>List all Remarks</td>
+	<td></td>
+</tr>
+<!--start to create remark-->
+<tr>
+	<td>verifyText</td>
 	<td>//div[@id='_title_fc_com_aeiou_bigbang_domain_Remark_id']/div/div/span[2]</td>
 	<td>Create new Remark</td>
 </tr>
@@ -78,64 +134,9 @@
 	<td>automatically refresh content every seconds</td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>//span[@id='dijit_form_ToggleButton_0']/span</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=(//input[@value=''])[6]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//span[@id='dijit_form_ToggleButton_1']/span</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=(//input[@value=''])[7]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//span[@id='dijit_form_ToggleButton_2']/span</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=(//input[@value=''])[8]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//span[@id='dijit_form_ToggleButton_3']/span</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=(//input[@value=''])[9]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//span[@id='dijit_form_Button_5']/span</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=(//input[@value=''])[10]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=proceed</td>
-	<td></td>
-</tr>
-<tr>
-	<td></td>
-	<td></td>
-	<td></td>
+	<td>type</td>
+	<td>dijitEditorBody</td>
+	<td>This is the Remark for test, should be remove after test.</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -150,13 +151,14 @@
 <tr>
 	<td>verifyText</td>
 	<td>css=td.tWireless</td>
-	<td>This is a remark that will disppear after test<br /> -- abc 用户 01230 11:11 15/08/2013</td>
+	<td>This is the Remark for test, should be remove after test. -- abc 用户 01230 22:40 15/08/2013</td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>//div[@id='_title_fc_com_aeiou_bigbang_domain_Remark_id']/div/div/span[2]</td>
 	<td>Create new Remark</td>
 </tr>
+<!--start to test the refresh time function-->
 <tr>
 	<td>sendKeys</td>
 	<td>id=refreshTime</td>
@@ -173,7 +175,7 @@
 	<td>15</td>
 </tr>
 <tr>
-	<td>sendKeys</td>
+	<td>type</td>
 	<td>id=refreshTime</td>
 	<td>16</td>
 </tr>
@@ -187,7 +189,6 @@
 	<td>id=refreshTime</td>
 	<td>16</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
