--- a/selenium/English/LeaveMG.html
+++ b/selenium/English/LeaveMG.html
@@ -11,6 +11,111 @@
 <thead>
 <tr><td rowspan="1" colspan="3">LeaveMG</td></tr>
 </thead><tbody>
+<!--log out first-->
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Logout</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img</td>
+	<td></td>
+</tr>
+<!--login with an other user-->
+<tr>
+	<td>sendKeys</td>
+	<td>id=j_username</td>
+	<td>tao</td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=j_password</td>
+	<td>1234</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
+	<td></td>
+</tr>
+<!--start to leave new user a message.-->
+<tr>
+	<td>verifyText</td>
+	<td>css=#_title_contentlistright5_id_pane &gt; table.tWireless &gt; tbody &gt; tr &gt; td.tWireless &gt; a</td>
+	<td>test bookmark</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=abc 用户 01230</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Leave abc 用户 01230 a Message</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=proceed</td>
+	<td></td>
+</tr>
+<!--log out and relog in with new user's account-->
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Logout</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=j_username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=j_username</td>
+	<td>abc 用户 01230</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=j_password</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=j_password</td>
+	<td>1234</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=proceed</td>
+	<td></td>
+</tr>
+<!--start to verify that the message is there-->
+<tr>
+	<td>verifyText</td>
+	<td>link=[1]</td>
+	<td>[1]</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img[alt=&quot;Check My Messages&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>css=td.tWireless</td>
+	<td>This is a test message and should be removed after test<br /> -- tao 23:34 15/08/2013</td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>[1]</td>
+	<td></td>
+</tr>
 
 </tbody></table>
 </body>
