--- a/selenium/English/PublishBM.html
+++ b/selenium/English/PublishBM.html
@@ -44,24 +44,9 @@
 	<td>Welcome to the space of abc 用户 01230----I am a test user</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>css=span.dijitTitlePaneTextNode</td>
-	<td>NEWS</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='_title_contentlistleft1_id']/div/div/span[2]</td>
-	<td>Useful Websites</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='_title_contentlistright0_id']/div/div/span[2]</td>
-	<td>Info For Team Members</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='_title_contentlistright1_id']/div/div/span[2]</td>
-	<td>JOBS</td>
+	<td>clickAndWait</td>
+	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
