--- a/selenium/English/ClearEnv.html
+++ b/selenium/English/ClearEnv.html
@@ -16,6 +16,11 @@
 	<td>/</td>
 	<td></td>
 </tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Logout</td>
+	<td></td>
+</tr>
 <!--login as administrator-->
 <tr>
 	<td>sendKeys</td>
@@ -35,7 +40,7 @@
 <!--delete all new BGs and RMs RM shoud be deleted automatically when BM is deleted.-->
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Manage Notes&quot;]</td>
+	<td>css=img[alt=&quot;Manage My Blogs&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -75,11 +80,6 @@
 	<td>OTHER</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Manage Contents&quot;]</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
 	<td>css=input.image</td>
 	<td></td>
@@ -96,7 +96,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=img[alt=&quot;Manage Contents&quot;]</td>
+	<td>css=img[alt=&quot;Manage My Bookmarks&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -228,6 +228,11 @@
 	<td>verifyText</td>
 	<td>css=p</td>
 	<td>Your Login Was Not Successful. Please Try Again. Reason: The user dose not exist. Please check the input and try again. .</td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/</td>
+	<td></td>
 </tr>
 <!--delete all new MGs-->
 </tbody></table>
