--- a/selenium/English/CreateBG.html
+++ b/selenium/English/CreateBG.html
@@ -11,6 +11,11 @@
 <thead>
 <tr><td rowspan="1" colspan="3">CreateBG</td></tr>
 </thead><tbody>
+<tr>
+	<td>open</td>
+	<td>/</td>
+	<td></td>
+</tr>
 <!--start to create Blog-->
 <tr>
 	<td>verifyText</td>
@@ -113,9 +118,9 @@
 	<td>Test Blog that will disppear after test</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>id=_title_ps_com_aeiou_bigbang_domain_Twitter_id_pane</td>
-	<td>The content of test Blog -- abc 用户 01230 22:36 15/08/2013</td>
+	<td>verifyTextPresent</td>
+	<td>The content of test Blog</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
@@ -149,9 +154,9 @@
 	<td>List all Remarks</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>css=td.tWireless</td>
-	<td>This is the Remark for test, should be remove after test. -- abc 用户 01230 22:40 15/08/2013</td>
+	<td>verifyTextPresent</td>
+	<td>This is the Remark for test, should be remove after test</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
