--- a/selenium/English/PublishBM.html
+++ b/selenium/English/PublishBM.html
@@ -11,6 +11,11 @@
 <thead>
 <tr><td rowspan="1" colspan="3">PublishBM</td></tr>
 </thead><tbody>
+<tr>
+	<td>open</td>
+	<td>/</td>
+	<td></td>
+</tr>
 <!--because can not modify the content in dropdown box, so the test can -->
 <!---add a BM visible to all user.-->
 <tr>
@@ -41,7 +46,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>css=b</td>
-	<td>Welcome to the space of abc 用户 01230----I am a test user</td>
+	<td>Welcome to the space of abc 用户 01230----I am a test user, I'll disppear myself after test.</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
