--- a/selenium/English/TS_demo.html
+++ b/selenium/English/TS_demo.html
@@ -8,12 +8,12 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="Untitled3.html">CheckDS</a></td></tr>
+<tr><td><a href="CheckDS.html">CheckDS</a></td></tr>
 <tr><td><a href="CreateNU.html">CreateNU</a></td></tr>
 <tr><td><a href="LogIn.html">LogIn</a></td></tr>
 <tr><td><a href="PublishBM.html">PublishBM</a></td></tr>
 <tr><td><a href="CreateBG.html">CreateBG&RM</a></td></tr>
-<tr><td><a href="Untitled2.html">CreateTG</a></td></tr>
+<tr><td><a href="CreateTG.html">CreateTG</a></td></tr>
 <tr><td><a href="LeaveMG.html">LeaveMG</a></td></tr>
 <tr><td><a href="ChangePI.html">ChangePI</a></td></tr>
 <tr><td><a href="SwitchTH.html">SwitchTH</a></td></tr>
