--- a/selenium/English/LogIn.html
+++ b/selenium/English/LogIn.html
@@ -12,6 +12,11 @@
 <tr><td rowspan="1" colspan="3">LogIn</td></tr>
 </thead><tbody>
 <tr>
+	<td>open</td>
+	<td>/</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
 	<td></td>
@@ -39,7 +44,12 @@
 <tr>
 	<td>verifyText</td>
 	<td>css=b</td>
-	<td>Welcome to the space of 用户abc 001----I am a test user, I am supposed to disppear myself after test.</td>
+	<td>Welcome to the space of abc 用户 01230----I am a test user, I'll disppear myself after test.</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='_title_contentlistright2_id']/div/div/span[2]</td>
+	<td>Info For Team Members</td>
 </tr>
 </tbody></table>
 </body>
