--- a/selenium/English/CreateNU.html
+++ b/selenium/English/CreateNU.html
@@ -321,8 +321,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
+	<td>css=span.emptySpan</td>
 	<td></td>
 </tr>
 <tr>
