--- a/selenium/English/CreateTG.html
+++ b/selenium/English/CreateTG.html
@@ -104,7 +104,7 @@
 <!--start to test new tag for Blog.-->
 <tr>
 	<td>clickAndWait</td>
-	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
+	<td>css=span.emptySpan</td>
 	<td></td>
 </tr>
 <tr>
