--- a/selenium/English/LeaveMG.html
+++ b/selenium/English/LeaveMG.html
@@ -40,7 +40,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
+	<td>css=span.emptySpan</td>
 	<td></td>
 </tr>
 <!--start to leave new user a message.-->
