--- a/selenium/English/PublishBM.html
+++ b/selenium/English/PublishBM.html
@@ -50,7 +50,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=a[name=&quot;Home&quot;] &gt; img</td>
+	<td>css=span.emptySpan</td>
 	<td></td>
 </tr>
 <tr>
